tests/compile-fail/Rule_20_2_'.rs
//~ ERROR invalid character `'` in crate name: `Rule_20_2_'`

// #![deny(clippy)]
// #[deny(warnings)]

// fn main() {
//     println!("This file's name is invalid.");
// }
